SFDC Automation/src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>National Rental Sales Process</fullName>
        <description>Used by Rental Sales Team</description>
        <isActive>true</isActive>
        <values>
            <fullName>Booked</fullName>
        </values>
        <values>
            <fullName>Lost</fullName>
        </values>
        <values>
            <fullName>Overcome Concerns</fullName>
        </values>
        <values>
            <fullName>Signed</fullName>
        </values>
        <values>
            <fullName>Solution Hypothesis</fullName>
        </values>
        <values>
            <fullName>Weigh Solution Options</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Ryder FMS Sales</fullName>
        <description>Sales Process for Leasse Business</description>
        <isActive>true</isActive>
        <values>
            <fullName>Booked</fullName>
        </values>
        <values>
            <fullName>Lost</fullName>
        </values>
        <values>
            <fullName>Overcome Concerns</fullName>
        </values>
        <values>
            <fullName>Signed</fullName>
        </values>
        <values>
            <fullName>Solution Hypothesis</fullName>
        </values>
        <values>
            <fullName>Weigh Solution Options</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>UVS Sales Process</fullName>
        <description>UVS Sales Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Booked</fullName>
        </values>
        <values>
            <fullName>Lost</fullName>
        </values>
        <values>
            <fullName>Need Analysis</fullName>
        </values>
        <values>
            <fullName>Negotiation</fullName>
        </values>
        <values>
            <fullName>Quote</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Account_Classification__c</fullName>
        <formula>TEXT( Account.Account_Classification__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Classification</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Location__c</fullName>
        <formula>Account.ShippingCity  &amp;  &quot;, &quot;  &amp;   Account.ShippingState</formula>
        <label>Account Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <formula>Account.Account_Type__c</formula>
        <label>Account Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_Close_Date__c</fullName>
        <description>Populated with the current date when the Opportunity is marked Signed / Booked / Lost</description>
        <label>Actual Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approved_Date__c</fullName>
        <label>Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approved__c</fullName>
        <label>Approved</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Assign_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field will be visible only to NCA and SCA to assign ownership.</description>
        <label>Assign To</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Only Sales or Admin can own the opportunities</errorMessage>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>BDM_Mkt_Auto_Pilot, DOS,CDM,BDM,National,DBD,DNA,Executive,SSO System Administrator, System Administrator</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities_Assign_To</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AutomaticBatchOpportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if this opportunity was created as part of the automatic batch opportunity creation process.</description>
        <label>AutomaticBatchOpportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Automatic_Renewed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Identify Opportunities Created Automatically based on vehicles expiring some time in the future.</description>
        <label>Automatic Renewed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BOUT_TOVER_CD__c</fullName>
        <label>Buyout/Takeover</label>
        <picklist>
            <picklistValues>
                <fullName>No Takeover</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buyout</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Takeover</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BOUT_VHCL_DEPO__c</fullName>
        <label>Buyout Vehicle Deposition</label>
        <picklist>
            <controllingField>BOUT_TOVER_CD__c</controllingField>
            <picklistValues>
                <fullName>Lease Back</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Re-Deployment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sell Vehicle</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CMPT_ID__c</fullName>
        <label>Competitor</label>
        <picklist>
            <controllingField>Deal_lost_to_Won_from_whom__c</controllingField>
            <picklistValues>
                <fullName>ComCar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dixie</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enterprise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gatorlease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hogan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hunt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IdealLease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I don&apos;t know</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interstate Natn&apos;l</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Provider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NationalLease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OEM (pls specify)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (pls specify)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ownership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PacLease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Penske</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rollins</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ryder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>We need the values here</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Warranty Category</label>
        <picklist>
            <picklistValues>
                <fullName>3 month / 25,000 miles - Class 8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 month / 50,000 miles - Class 8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12 month / 100,000 miles - Class 8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 month / 10,000 miles - Class A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 month / 20,000 miles - Class A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12 month / 40,000 miles - Class A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 month / 10,000 miles - Class B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 month / 20,000 miles - Class B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12 month / 40,000 miles - Class B</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Company_Type__c</fullName>
        <formula>Text(Account.Type)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Count_of_Opportunities__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Count of Opportunities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_100_Ownership__c</fullName>
        <description>Select Yes if this company owned their entire fleet when we got them, regardless of who was providing maintenance services, or they went to 100% ownership if we lost them. Select No if this company had any portion of their fleet under a lease contract</description>
        <inlineHelpText>Select Yes if this company owned their entire fleet when we got them, regardless of who was providing maintenance services, or they went to 100% ownership if we lost them. Select No if this company had any portion of their fleet under a lease contract</inlineHelpText>
        <label>Customer 100% Ownership</label>
        <picklist>
            <controllingField>Deal_lost_to_Won_from_whom__c</controllingField>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Opportunity Details Captured&quot;, &quot;Missing: &quot;&amp;IF( ISPICKVAL( Type ,&quot;&quot;),&quot;Type, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(LEN( TEXT(MONTH(CloseDate))) = 0, &quot;Close Date, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( Amount &lt;= 0, &quot;Amount, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( LeadSource,&quot;&quot;), &quot;Lead Source, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(NextStep)=0, &quot;Next Steps&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( ISPICKVAL(Type,&quot;&quot;), 0,20) + IF( LEN( TEXT(MONTH(CloseDate))) = 0, 0,20) + IF( Amount &lt;= 0, 0,20) + IF( ISPICKVAL( LeadSource,&quot;&quot;), 0,20) + IF( LEN(NextStep)=0, 0,20)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deal_lost_to_Won_from_whom__c</fullName>
        <label>Deal lost to/ Won from whom</label>
        <picklist>
            <controllingField>Reason_Won_Lost__c</controllingField>
            <picklistValues>
                <fullName>Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ownership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pipeline inactive cleanup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Common Carrier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Competition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not lost. Duplicate pipeline</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Down_Payment_Percent__c</fullName>
        <label>Down Payment %</label>
        <picklist>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Down_Payment__c</fullName>
        <label>Down Payment</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EQUP_TYPE__c</fullName>
        <label>Equipment Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EST_DEAL_CLOSE_DATE__c</fullName>
        <label>Estimated Deal Close Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EST_DEAL_VAL__c</fullName>
        <label>Estimated Deal Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EVA_VEH__c</fullName>
        <label>EVA Vehicle Count</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EVA__c</fullName>
        <label>Average EVA</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Proposal_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Estimated Proposed Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Total_Revenue__c</fullName>
        <inlineHelpText>Enter the total estimated worth of the National Opportunity</inlineHelpText>
        <label>Estimated Total Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Total_Vehicles__c</fullName>
        <inlineHelpText>Enter the total # of vehicles for the entire National Opportunity.</inlineHelpText>
        <label>Estimated Total Vehicles</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Finance_Company__c</fullName>
        <label>Finance Company</label>
        <picklist>
            <picklistValues>
                <fullName>Finance 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance 6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance 7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance 8</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Financing__c</fullName>
        <label>Financing</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Fleet_Buy_Out_Stage__c</fullName>
        <label>Fleet Buy Out Stage</label>
        <picklist>
            <picklistValues>
                <fullName>In Progress</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gross_Revenue__c</fullName>
        <label>Gross Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HasAccount__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to determine if there is an account value.  Once added, a user cannot change the account.</description>
        <label>HasAccount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Included_in_Monthly_Forecast__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Included in Monthly Forecast</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Included_in_Quarterly_Forecast__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Included in Quarterly Forecast</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Industry_Specialist__c</fullName>
        <label>Industry Specialist</label>
        <picklist>
            <picklistValues>
                <fullName>Food &amp; Beverage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oil and Gas</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Industry_Type__c</fullName>
        <formula>TEXT(Account.Industry)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Industry Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interest_Rate__c</fullName>
        <label>Interest Rate</label>
        <picklist>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16.5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LAST_ACT_DATE__c</fullName>
        <label>Last Active Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Edit_Date__c</fullName>
        <label>Last Edit Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Latest_Update__c</fullName>
        <description>This field holds the comment of the latest Activity of Type = &apos;Account/Opportunity Update&apos; on Opportunity which is created by Account/Opportunity Owner, NCA or SAC.</description>
        <inlineHelpText>This field holds the comment of the latest Activity of Type = &apos;Account/Opportunity Update&apos; on Opportunity which is created by Account/Opportunity Owner, NCA or SAC.</inlineHelpText>
        <label>Latest Update</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lead_Employee_Email__c</fullName>
        <description>Email of the Employee who referred the Lead from which this opportunity was created.</description>
        <label>Lead Employee Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Legacy_Last_Modified_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Legacy CIM fields for data migration</description>
        <label>Legacy Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Legacy_Last_Modified_Date__c</fullName>
        <description>Legacy fields for data migration</description>
        <label>Legacy Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Legacy_Owner_Id__c</fullName>
        <label>Legacy Owner Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Provider_Name__c</fullName>
        <inlineHelpText>Please complete ONLY when selecting &quot;Local Provider&quot; from the Competitor field.</inlineHelpText>
        <label>Local Provider Name</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NET_REVENUE__c</fullName>
        <label>Net Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NVI_Total__c</fullName>
        <description>Net Investment</description>
        <label>NVI Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_Vehicles__c</fullName>
        <formula>Num_of_vehicles__c  *  Probability</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Vehicles</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to mark an opportunity with at-least one of the rate sheets having Transaction type as New Add Business</description>
        <inlineHelpText>Field to mark an opportunity with at-least one of the rate sheets having Transaction type as New Add Business</inlineHelpText>
        <label>New Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Win/Loss Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Num_of_vehicles__c</fullName>
        <inlineHelpText># of Vehicles must be entered on the Opportunity Line Item, or they will roll-up from Rate Sheets/Deal Summaries.</inlineHelpText>
        <label>Total Number of Vehicles</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Old_Revenue__c</fullName>
        <label>Old Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>On_Site__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to represent if the opportunity is for on-site product (formerly known as Captive Shop)</description>
        <inlineHelpText>Indicate if this is an On-Site opportunity (formerly Captive Shop). Salesforce.com reporting will show the entire opportunity as On-Site. Therefore, if there are portions that are not On-Site, create a separate opportunity for those.</inlineHelpText>
        <label>On-Site</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <description>Name of the Opportunity in Auto Number format</description>
        <displayFormat>OPP-{00000000}</displayFormat>
        <externalId>true</externalId>
        <inlineHelpText>Name of the Opportunity in Auto Number format</inlineHelpText>
        <label>Opportunity Name</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Opportunity_Type__c</fullName>
        <formula>CASE( $RecordType.Name , &apos;Parent Opportunity&apos;, &apos;Parent&apos;, &apos;Standard Opportunity&apos;,&apos;Standard&apos;,&apos;Child Opportunity&apos;,&apos;Child&apos;,&apos;&apos;)</formula>
        <label>Opportunity Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Decision_Maker__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Original Decision Maker</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <filterItems>
                <field>Contact.STATUS_ACTIVE__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <infoMessage>The Contact you are adding as an Original Decision Maker must be an active Contact within the same Account where you are creating the new Opportunity.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PW_RelatedOppty__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related to the original opportunity crated from the Partial Win</description>
        <label>Related Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunities (Related Opportunity)</relationshipLabel>
        <relationshipName>PW_Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used for National Accounts / Coordinated accounts to list the overarching opportunity</description>
        <inlineHelpText>This is the National or Coordinated Account Opportunity</inlineHelpText>
        <label>Parent Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Local Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PartialWinDealLostToWonFrom__c</fullName>
        <description>Use to display the Deal Lost To Won From whom options on the Partial Win Rate Sheet page</description>
        <label>PartialWinDealLostToWonFrom</label>
        <picklist>
            <controllingField>PartialWinLostReason__c</controllingField>
            <picklistValues>
                <fullName>Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ownership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pipeline inactive cleanup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Common Carrier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Competition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not lost. Duplicate pipeline</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PartialWinIncumbent__c</fullName>
        <description>Use to display the Incumbent options on the Partial Win Rate Sheet page</description>
        <label>PartialWinIncumbent</label>
        <picklist>
            <controllingField>PartialWinRateSheetCompetitor__c</controllingField>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PartialWinLocalProvider__c</fullName>
        <description>Use to enter the Local Provider Name options on the Partial Win Rate Sheet page</description>
        <label>PartialWinLocalProvider</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PartialWinLostReason__c</fullName>
        <label>PartialWinLostReason</label>
        <picklist>
            <picklistValues>
                <fullName>Less expensive option available</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsatisfactory maintenance quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fleet downsizing by a split fleet customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsatisfactory breakdown service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unable to meet business needs/ provide flexibility/ act as partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsatisfactory billing and invoicing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsatisfactory account management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Company declined due to credit- Customer unwilling to agree to credit-related stipulations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insufficient proximity/ convenience of service locations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ryder closed location</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fleet downsizing by a 100% Ryder Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer closed location</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change in transportation model to common carrier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Company declined due to credit-not credit worthy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bankruptcy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Company acquisition or Management change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RIL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Lost - Duplicate Pipeline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Declined due to credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ability to Extend Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change in Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Company out of business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Economic Conditions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fleet Downsize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I Don&apos;t Know</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I Don&apos;t Remember</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Issue with Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Length of lease</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>